Fix handler logic
