# internal/delivery/http/handler.go
@@ -1,12 +1,14 @@
 package http
 
 import (
+	"github.com/Owner-maker/nats-learning/internal/models"
+	"github.com/Owner-maker/nats-learning/internal/service"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-	"nats-learning/internal/models"
-	"nats-learning/internal/service"
 	"net/http"
+
+	_ "github.com/Owner-maker/nats-learning/docs"
 )
 
 type Handler struct {
@@ -26,11 +28,8 @@ func (h *Handler) InitRoutes() *gin.Engine {
 
 	api := router.Group("/api")
 	{
-		orders := api.Group("/orders")
-		{
-			orders.GET(":uid", h.GetOrderById)
-			orders.GET("", h.GetAllOrders)
-		}
+		api.GET("/order/:uid", h.GetOrderById)
+		api.GET("/orders", h.GetAllOrders)
 	}
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
@@ -40,15 +39,15 @@ func (h *Handler) InitRoutes() *gin.Engine {
 // GetOrderById
 // @Summary GetOrderById
 // @Description Allows to get specific order from the app's cache via its uid
-// @ID ger-order-by-id
+// @ID get-order-by-id
 // @Accept json
 // @Produce json
-// @Param uid path string true "order's uid"
+// @Param uid path string true "order's uid" minlength(19)  maxlength(19)
 // @Success 200 {object} models.Order
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /api/order/:uid [get]
+// @Router /api/order/{uid} [get]
 func (h *Handler) GetOrderById(c *gin.Context) {
 	uid := c.Param("uid")
 	order, err := h.service.GetCachedOrder(uid)
@@ -62,7 +61,7 @@ func (h *Handler) GetOrderById(c *gin.Context) {
 // GetAllOrders
 // @Summary GetAllOrders
 // @Description Allows to get all orders from the app's cache
-// @ID ger-all-orders
+// @ID get-all-orders
 // @Accept json
 // @Produce json
 // @Success 200 {object} getAllOrdersResponse
